objects/LLC_BI__Pricing_Matrix__c.object
<CustomObject>
    <description>Use the Pricing Matrix object to import variables--such as credit score ranges, loan value ranges, and interest rates--for a variety of products. These variables are fed to the data table and used to calculate automated pricing.</description>
    <fields>
        <fullName>LLC_BI__Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox field to indicate the applicant&apos;s credit report contains a bankruptcy filing. By default, this field is deselected.</description>
        <inlineHelpText>Select this field to indicate an applicant&apos;s credit report contains a bankruptcy filing.</inlineHelpText>
        <label>Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Charge_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox field to indicate the applicant&apos;s credit report contains a charge-off account. By default, this field is deselected.</description>
        <inlineHelpText>Select this field to indicate an applicant&apos;s credit report contains a charge-off account.</inlineHelpText>
        <label>Charge-Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <description>The user populates this text field to indicate the high-level type of collateral pledged to a loan. For example, Real Estate, New Auto, Boat. By default, this field is blank.</description>
        <inlineHelpText>Enter the high-level type of pledged collateral in this field.</inlineHelpText>
        <label>Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Maximum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number field is optional. The user manually populates this field with the high end of the credit score range.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the high end of the credit score range.</inlineHelpText>
        <label>Maximum Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number field is optional. The user manually populates this field with the low end of the credit score range.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the low end of the credit score range.</inlineHelpText>
        <label>Minimum Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employee_Discount__c</fullName>
        <description>The user populates this percentage field to indicate the percent-discount an employee receives on a loan. The system subtracts this field from the qualifying interest rate(s) retrieved from the pricing matrix. By default, this field is blank.</description>
        <inlineHelpText>Enter the percent discount an employee receives on a loan in this field.</inlineHelpText>
        <label>Employee Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Foreclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox field to indicate the applicant&apos;s credit report contains a foreclosure tradeline history. By default, this field is deselected.</description>
        <inlineHelpText>Select this field to indicate an applicant&apos;s credit report contains a foreclosure tradeline history.</inlineHelpText>
        <label>Foreclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This system automatically populates this optional picklist with information from the Pricing Matrix to specify the index the lending rate follows.</description>
        <inlineHelpText>This system-populated field displays the index the lending rate follows.</inlineHelpText>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label> </label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</description>
        <inlineHelpText>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Value_Maximum__c</fullName>
        <description>This currency field is optional. The user manually populates this field with the high end of the loan value range.</description>
        <inlineHelpText>This currency field is optional. The user manually populates this field with the high end of the loan value range.</inlineHelpText>
        <label>Maximum Loan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Value_Minimum__c</fullName>
        <description>This currency field is optional. The user manually populates this field with the low end of the loan value range.</description>
        <inlineHelpText>This currency field is optional. The user manually populates this field with the low end of the loan value range.</inlineHelpText>
        <label>Minimum Loan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Amount_For_Auto_Approval__c</fullName>
        <description>The user populates this currency field to indicate the maximum dollar amount a loan can be for the system to auto-approve the loan. By default, this field is blank.</description>
        <inlineHelpText>Enter the maximum dollar amount a loan can have to qualify for auto-approval.</inlineHelpText>
        <label>Maximum Amount for Auto-Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Collateral_Age__c</fullName>
        <description>The user populates this number field to indicate the maximum collateral age the pledged collateral on a loan can have for an auto-approval decision. By default, this field is blank.</description>
        <inlineHelpText>Enter the maximum age pledged collateral may have to qualify a loan for auto-approval in this field.</inlineHelpText>
        <label>Maximum Collateral Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Debt_To_Income__c</fullName>
        <description>The user populates this percentage field to indicate the maximum debt-to-income ratio an applicant can have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Enter the maximum debt-to-income (DTI) ratio an applicant may have to qualify for auto-approval in this field.</inlineHelpText>
        <label>Maximum Debt-to-Income</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Loan_To_Value__c</fullName>
        <description>The user populates this percentage field to indicate the maximum loan-to-value ratio an applicant can have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Enter the maximum loan-to-value ratio an applicant must have to qualify for auto-approval in this field.</inlineHelpText>
        <label>Maximum Loan-to-Value</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Mileage__c</fullName>
        <description>The user populates this number field to indicate the maximum mileage the pledged collateral on a loan can have for an auto-approval decision. By default, this field is blank.</description>
        <inlineHelpText>Enter the maximum mileage pledged collateral may have to qualify a loan for auto-approval in this field.</inlineHelpText>
        <label>Maximum Mileage</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Total_Credit_Exposure__c</fullName>
        <description>The user populates this currency field to indicate the current total credit exposure for which a credit applicant can qualify. This field filters the offers presented to the customer. By default, this field is blank.</description>
        <inlineHelpText>Enter the total credit exposure a borrower can have to qualify for credit.</inlineHelpText>
        <label>Maximum Total Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Collateral_Age__c</fullName>
        <description>The user populates this number field to indicate the minimum collateral age the pledged collateral on a loan can have for an auto-approval decision. By default, this field is blank.</description>
        <inlineHelpText>Enter the minimum age pledged collateral may have to qualify a loan for auto-approval in this field.</inlineHelpText>
        <label>Minimum Collateral Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Credit_Score_For_Auto_Approval__c</fullName>
        <description>The user populates this number field to indicate the minimum credit score required to auto-approve a loan. By default, this field is blank.</description>
        <inlineHelpText>Enter the minimum credit score required to auto-approve a loan.</inlineHelpText>
        <label>Minimum Credit Score for Auto-Approval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Debt_To_Income__c</fullName>
        <description>The user populates this percentage field to indicate the minimum debt-to-income ratio an applicant must have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Enter the minimum debt-to-income (DTI) ratio an applicant may have to qualify for auto-approval in this field.</inlineHelpText>
        <label>Minimum Debt-to-Income</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Loan_To_Value__c</fullName>
        <description>The user populates this percentage field to indicate the minimum loan-to-value ratio an applicant must have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Enter the minimum loan-to-value ratio an applicant must have to qualify for auto-approval in this field.</inlineHelpText>
        <label>Minimum Loan-to-Value</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Mileage__c</fullName>
        <description>The user populates this number field to indicate the minimum mileage the pledged collateral on a loan can have for an auto-approval decision. By default, this field is blank.</description>
        <inlineHelpText>Enter the minimum mileage pledged collateral may have to qualify a loan for auto-approval in this field.</inlineHelpText>
        <label>Minimum Mileage</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product line being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product line being priced.</inlineHelpText>
        <label>Product Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product being priced.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product type being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product type being priced.</inlineHelpText>
        <label>Product Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Type__c</fullName>
        <description>The user populates this text field to indicate the subtype of collateral pledged to a loan. For example, Primary, Secondary, Investment. By default, this field is blank.</description>
        <inlineHelpText>Enter the subtype of pledged collateral in this field.</inlineHelpText>
        <label>Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix to specify the maximum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the maximum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Region__c</fullName>
        <description>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</description>
        <inlineHelpText>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Repossession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox field to indicate the applicant&apos;s credit report contains a repossession tradeline history. By default, this field is deselected.</description>
        <inlineHelpText>Select this field to indicate an applicant&apos;s credit report contains a repossession tradeline history.</inlineHelpText>
        <label>Repossession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Rate__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix with the interest rate initially applied to the loan. The rate is in effect for a given number of payments.</description>
        <inlineHelpText>This system-populated field displays the interest rate initially applied to the loan.</inlineHelpText>
        <label>Teaser Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Term__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix to indicate the number of payments the teaser rate is in effect.</description>
        <inlineHelpText>This system-populated field displays the number of payments the teaser rate is in effect.</inlineHelpText>
        <label>Teaser Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Months__c</fullName>
        <description>This number field is optional. The user manually populates this field with the term output for a loan with the identifying variables.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the term output for a loan with the identifying variables.</inlineHelpText>
        <label>Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Matrix</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>